--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
-    <script type="module" src="Scripts/background.js"></script>
+    <script src="Scripts/background.js"></script>
 </body>
