--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>GDrive</title>
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
+    <script src="three.js"></script>
     <script type="module" src="Scripts/background.js"></script>
 </body>
