--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <script src="three.js"></script>
+    <script src="GLTFLoader.js"></script>
     <script type="module" src="Scripts/background.js"></script>
 </body>
