--- a/index.html
+++ b/index.html
@@ -6,5 +6,49 @@
     <title>GDrive</title>
 </head>
 <body>
-    <script type="module" src="Scripts/background.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.125.2/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.125.2/examples/js/loaders/GLTFLoader.js"></script>
+
+    <script>
+    // Создаем сцену
+    var scene = new THREE.Scene();
+
+    // Создаем камеру
+    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+    // Создаем рендерер и добавляем его в документ
+    var renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Создаем геометрию куба и материал
+    var geometry = new THREE.BoxGeometry();
+    var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+
+    // Создаем меш куба
+    var cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    // Устанавливаем камеру
+    camera.position.z = 5;
+
+    var loader = new THREE.GLTFLoader();
+
+    // Загружаем модель
+    loader.load('path_to_your_model.gltf', function (gltf) {
+        scene.add(gltf.scene);
+        // Здесь можно добавить код для анимации или дополнительной обработки модели
+    }, undefined, function (error) {
+        console.error('An error happened:', error);
+    });
+
+    // Функция анимации
+    function animate() {
+        requestAnimationFrame(animate);
+        // Вы можете добавить код для анимации модели здесь
+        renderer.render(scene, camera);
+    }
+
+    animate();
+    </script>
 </body>
