--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     var loader = new THREE.GLTFLoader();
 
     // Загружаем модель
-    loader.load('path_to_your_model.gltf', function (gltf) {
+    loader.load('g2.gltf', function (gltf) {
         scene.add(gltf.scene);
         // Здесь можно добавить код для анимации или дополнительной обработки модели
     }, undefined, function (error) {
