--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             requestAnimationFrame(animate);
         
             // Вращение куба
-            cube.rotation.x += 0.01;
+            cube.rotation.z += 0.01;
             cube.rotation.y += 0.01;
         
             // Рендеринг сцены
