--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             requestAnimationFrame(animate);
         
             // Вращение куба
-            cube.rotation.x += 0.001;
+            cube.rotation.x += 0.01;
             cube.rotation.y += 0.01;
+            cube.rotation.z += 0.01;
         
             // Рендеринг сцены
             renderer.render(scene, camera);
