--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         document.body.appendChild(renderer.domElement);
         
         // Создаем геометрию куба и материал
-        var geometry = new THREE.BoxGeometry();
+        var geometry = new THREE.BoxGeometry(1, 1, 1);
         var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
         
         // Создаем меш куба
